--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,5 +16,6 @@ input[type="number"] {
 }
 
 body {
-  font-family: IBM Plex Mono;
+  font-family: Russo One
+  ;
 }
