--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,6 +16,6 @@ input[type="number"] {
 }
 
 body {
-  font-family: Russo One
+  font-family: Barlow
   ;
 }
